--- a/index.html
+++ b/index.html
@@ -142,128 +142,133 @@
                 </div>
             </div>
             <div class="row align-items-stretch gy-5 text-center">
+
+                <!-- Développement web -->
                 <div class="col-lg-3 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="100">
-                    <div class="service py-5 px-4 border bord">
+                    <div class="service py-5 px-4 border bord d-flex flex-column w-100">
                         <div class="service-icon">
                             <img class="img-fluid m-2" src="assets/img/icons8-webdev.png"
-                                srcset="assets/webp/icons8-webdev.webp, assets/img/icons8-webdev.png" alt="icon-web" />
+                                srcset="assets/webp/icons8-webdev.webp, assets/img/icons8-webdev.png" alt="icon-web"
+                                loading="lazy" />
                         </div>
                         <h5 class="mt-4">Développement web</h5>
-                        <p>Ma capacité à concevoir et développer des applications web s'appuie sur ma maîtrise de
-                            diverses technologies, parmi lesquelles :
-
-                            HTML, pour la structure de base des pages web,
-                            CSS, pour la mise en forme et le style,
-                            PHP, pour la logique côté serveur,
-                            JavaScript, pour des fonctionnalités interactives et dynamiques,
-                            De plus, je suis à l'aise avec l'utilisation de frameworks modernes tels que Bootstrap,
-                            React, et Symfony, qui accélèrent le processus de développement tout en offrant des
-                            solutions robustes et évolutives</p>
-                        <!--<btn class="btn btn-brand">En savoir plus</btn>-->
+                        <ul class="text-start mx-auto" style="max-width: 95%;">
+                            <li>HTML5, CSS3, JavaScript, PHP</li>
+                            <li>Frameworks: Bootstrap, React, Symfony</li>
+                            <li>Apps robustes, évolutives, bonnes pratiques</li>
+                        </ul>
                     </div>
                 </div>
+
+                <!-- Administration système -->
                 <div class="col-lg-3 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="100">
-                    <div class="service py-5 px-4 border bord">
+                    <div class="service py-5 px-4 border bord d-flex flex-column w-100">
                         <div class="service-icon">
                             <img class="img-fluid m-2" src="assets/img/icons8-microsoft-admin-50.png"
                                 srcset="assets/webp/icons8-microsoft-admin-50.webp, assets/img/icons8-microsoft-admin-50.png"
-                                alt="icon-admin" />
+                                alt="icon-admin" loading="lazy" />
                         </div>
                         <h5 class="mt-4">Administration système</h5>
-                        <p>En plus de mes cours en administration système, j'ai eu l'opportunité de mettre en pratique
-                            mes compétences sur des plateformes telles que Root-Me et Hack The Box. Mes expériences
-                            incluent :
-                            - La configuration et la gestion des serveurs Linux, assurant une performance optimale et
-                            une sécurité accrue,
-                            - L'administration de serveurs Windows, y compris la gestion des services, des utilisateurs
-                            et des politiques de sécurité,
-                            - La résolution efficace des problèmes système, la surveillance et la maintenance proactive
-                            pour garantir le bon fonctionnement des infrastructures,
-                            - La mise en place de sauvegardes et de stratégies de récupération des données pour assurer
-                            la continuité des opérations.
-                            Mon expérience en administration système me permet de maintenir des environnements
-                            informatiques stables et sécurisés, quel que soit le système d'exploitation.</p>
-                        <!--<btn class="btn btn-brand">En savoir plus</btn>-->
+                        <ul class="text-start mx-auto" style="max-width: 95%;">
+                            <li>Windows Server, Linux (Debian/Ubuntu)</li>
+                            <li>Active Directory, GPO, comptes & accès</li>
+                            <li>Monitoring, sauvegardes, continuité (PCA)</li>
+                        </ul>
                     </div>
                 </div>
+
+                <!-- Développement logiciel -->
                 <div class="col-lg-3 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="200">
-                    <div class="service py-5 px-4 border">
+                    <div class="service py-5 px-4 border d-flex flex-column w-100">
                         <div class="service-icon">
                             <img class="img-fluid m-2" src="assets/img/icons8-google-code-50.png"
                                 srcset="assets/webp/icons8-google-code-50.webp, assets/img/icons8-google-code-50.png"
-                                alt="icon-logiciel" />
+                                alt="icon-logiciel" loading="lazy" />
                         </div>
-                        <h5 class="mt-4">Développement Logiciel</h5>
-                        <p>Je possède une solide connaissance en programmation et je sais utiliser plusieurs langages de
-                            programmation tels que Java,
-                            Python, C, C++ et C# pour créer des applications logicielles ou des jeux-vidéo (Unity 3D).
-                        </p>
+                        <h5 class="mt-4">Développement logiciel</h5>
+                        <ul class="text-start mx-auto" style="max-width: 95%;">
+                            <li>Langages: Java, Python, C, C++, C#</li>
+                            <li>Unity 3D, Git/GitHub, patterns & tests</li>
+                        </ul>
                     </div>
                 </div>
+
+                <!-- Développement Android -->
                 <div class="col-lg-3 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="200">
-                    <div class="service py-5 px-4 border">
+                    <div class="service py-5 px-4 border d-flex flex-column w-100">
                         <div class="service-icon">
                             <img class="img-fluid m-2" src="assets/img/icons8-android-50.png"
                                 srcset="assets/webp/icons8-android-50.webp, assets/img/icons8-android-50.png"
-                                alt="icon-logiciel" />
+                                alt="icon-android" loading="lazy" />
                         </div>
                         <h5 class="mt-4">Développement Android</h5>
-                        <p>En plus de mes compétences en développement web, j'ai suivi des cours de développement
-                            Android et je suis capable de concevoir et développer des applications Android. Mon
-                            expérience inclut :
-                            - La création d'interfaces utilisateur conviviales en utilisant XML et les ressources
-                            Android,
-                            - La programmation en Java et Kotlin pour la logique de l'application,
-                            - L'intégration de fonctionnalités avancées telles que la gestion des bases de données, la
-                            connectivité réseau, et bien plus encore.
-                            Je suis également familier avec les dernières pratiques et technologies Android pour vous
-                            offrir des applications modernes et performantes. </p>
+                        <ul class="text-start mx-auto" style="max-width: 95%;">
+                            <li>Java & Kotlin, Android Studio</li>
+                            <li>UI XML, navigation, gestion réseau/DB</li>
+                        </ul>
                     </div>
                 </div>
+
+                <!-- Cybersécurité -->
                 <div class="col-lg-3 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="300">
-                    <div class="service py-5 px-4 border">
+                    <div class="service py-5 px-4 border d-flex flex-column w-100">
                         <div class="service-icon">
                             <img class="img-fluid m-2" src="assets/img/icons8-base-de-données-50.png"
-                                alt="icon-database"
-                                srcset="assets/webp/icons8-base-de-données-50.webp, assets/img/icons8-base-de-données-50.png" />
+                                srcset="assets/webp/icons8-base-de-données-50.webp, assets/img/icons8-base-de-données-50.png"
+                                alt="icon-cyber" loading="lazy" />
                         </div>
                         <h5 class="mt-4">Cybersécurité</h5>
-                        <p>En parallèle de ma formation académique, je m'investis activement dans mon développement
-                            professionnel en cybersécurité. Pour approfondir mes compétences et rester à la pointe de ce
-                            domaine en constante évolution, je consacre du temps à des activités d'auto-formation sur
-                            des plateformes telles que Root Me. Ces expériences enrichissantes m'ont permis d'explorer
-                            des scénarios de sécurité réels, de résoudre des défis complexes, et d'affiner mes
-                            compétences en matière de détection et de prévention des vulnérabilités. Cette démarche
-                            personnelle démontre mon engagement envers l'apprentissage continu et ma passion pour la
-                            cybersécurité, que je mets en pratique au quotidien.<a
-                                href="https://www.root-me.org/Zetsu-794769"> Mon profil Root-me</a></p>
+                        <ul class="text-start mx-auto" style="max-width: 95%;">
+                            <li>Pentesting & Ethical Hacking (Nmap, Nessus, Burp Suite, Metasploit, Wireshark)</li>
+                            <li>Attaques & contre-mesures : SQLi, XSS, MITM, brute force</li>
+                            <li>Supervision & défense : SIEM (Splunk/ELK), EDR/XDR, réponse aux incidents</li>
+                            <li>Gestion des accès : Entra ID, MFA, Zero Trust</li>
+                            <li>Sécurité messagerie : SPF, DKIM, DMARC, TLS/SSL</li>
+                            <li>Normes & conformité : Autodiagnostic ANSSI, PCA/PRA, ISO 27001</li>
+                        </ul>
+                        <a class="mt-2" href="https://www.root-me.org/Zetsu-794769" aria-label="Profil Root-Me">
+                            Mon profil Root-Me
+                        </a>
+                        <p class="mt-2 text-muted"><em>Certification CEH en préparation</em></p>
                     </div>
                 </div>
+
+
+                <!-- Outils bureautique -->
                 <div class="col-lg-3 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="300">
-                    <div class="service py-5 px-4 border">
+                    <div class="service py-5 px-4 border d-flex flex-column w-100">
                         <div class="service-icon">
                             <img class="img-fluid m-2" src="assets/img/icons8-outils-administratifs-50.png"
-                                alt="icon-office"
-                                srcset="assets/webp/icons8-outils-administratifs-50.webp, assets/img/icons8-outils-administratifs-50.png" />
+                                srcset="assets/webp/icons8-outils-administratifs-50.webp, assets/img/icons8-outils-administratifs-50.png"
+                                alt="icon-office" loading="lazy" />
                         </div>
-                        <h5 class="mt-4">Outils de bureautique</h5>
-                        <p>Je maitrise les outils de la suite Microsoft Office tels que Word, Excel, PowerPoint et
-                            Outlook. Je maîtrise également les outils logiciels tels que MSproject.</p>
+                        <h5 class="mt-4">Outils & gestion</h5>
+                        <ul class="text-start mx-auto" style="max-width: 95%;">
+                            <li>Office: Word, Excel, PowerPoint, Outlook</li>
+                            <li>Projet & collab: MS Project, Trello, Notion</li>
+                            <li>Versioning: Git/GitHub</li>
+                        </ul>
                     </div>
                 </div>
+
+                <!-- Backend -->
                 <div class="col-lg-3 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="400">
-                    <div class="service py-5 px-4 border">
+                    <div class="service py-5 px-4 border d-flex flex-column w-100">
                         <div class="service-icon">
-                            <img class="img-fluid m-2" src="assets/img/icons8-domaine-50.png" alt="icon-webserver"
-                                srcset="assets/webp/icons8-domaine-50.webp, assets/img/icons8-domaine-50.png"></img>
+                            <img class="img-fluid m-2" src="assets/img/icons8-domaine-50.png"
+                                srcset="assets/webp/icons8-domaine-50.webp, assets/img/icons8-domaine-50.png"
+                                alt="icon-backend" loading="lazy" />
                         </div>
                         <h5 class="mt-4">Backend</h5>
-                        <p>Je maîtrise les technologies du backend, y compris PHP et le framework Symfony, pour
-                            développer des applications web performantes et sécurisées.</p>
+                        <ul class="text-start mx-auto" style="max-width: 95%;">
+                            <li>PHP, Symfony, APIs REST</li>
+                            <li>Sécu applicative: OWASP basics</li>
+                        </ul>
                     </div>
                 </div>
+
             </div>
-        </div>
+
     </section>
     <!-- About-->
     <section class="section-padding section-connector" data-aos="fade-up" data-aos-delay="100" id="parcours">
