--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
                         <a class="mt-2" href="https://www.root-me.org/Zetsu-794769" aria-label="Profil Root-Me">
                             Mon profil Root-Me
                         </a>
+                        <a class="mt-2" href="https://tryhackme.com/p/Z33tsu" aria-label="Profil THM">
+                            Mon profil TryHackMe
+                        </a>
                         <p class="mt-2 text-muted"><em>Certification CEH en préparation</em></p>
                     </div>
                 </div>
@@ -279,9 +282,55 @@
                 <br><br>
             </div>
             <ul class="timeline">
+
+                <!-- Contrat de professionnalisation -->
                 <li class="timeline-inverted">
                     <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
-                        <img class="rounded-circle img-fluid" src="assets/img/uemc.jpg" alt="cvut-image"
+                        <img class="rounded-circle img-fluid" src="assets/img/happybabees.png" alt="happybabees-image"
+                            style="height: 100%; width: 100%;"
+                            srcset="assets/webp/happybabees.webp, assets/img/happybabees.png" />
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h3>2024 - 2025</h3>
+                            <h4 class="subheading">Contrat de professionnalisation</h4>
+                        </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                                Chargé de systèmes d'information opérationnel chez <strong>Happy Babees
+                                    (Nantes)</strong>.
+                                Gestion et optimisation du SI, automatisation de processus SaaS, cybersécurité
+                                (autodiagnostic ANSSI, PCA/PRA, gestion des accès, protocoles de messagerie sécurisés).
+                            </p>
+                        </div>
+                    </div>
+                </li>
+
+                <!-- École d’ingénieurs -->
+                <li>
+                    <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
+                        <img class="rounded-circle img-fluid" src="assets/img/esaip.png" alt="esaip-image"
+                            style="height: 100%; width: 99%;" srcset="assets/webp/esaip.webp, assets/img/esaip.png" />
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h3>2023 - 2025</h3>
+                            <h4 class="subheading">Cycle ingénieur à l'ESAIP</h4>
+                        </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                                Cycle ingénieur en informatique et réseaux à l'ESAIP, avec spécialisation en
+                                cybersécurité.
+                                Formation mêlant théorie et projets concrets dans un contexte international.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+
+                <!-- Séjour 2024 -->
+                <li class="timeline-inverted">
+                    <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
+                        <img class="rounded-circle img-fluid" src="assets/img/uemc.jpg" alt="uemc-image"
                             style="height: 100%; width: 99%;" srcset="assets/webp/uemc.webp, assets/img/uemc.jpg" />
                     </div>
                     <div class="timeline-panel">
@@ -291,99 +340,76 @@
                         </div>
                         <div class="timeline-body">
                             <p class="text-muted">
-                                Durant ce second séjour à Valladolid en Espagne, j'ai renforcé mes compétences en
-                                cybersécurité
-                                et informatique tout en évoluant dans un environnement international.
-                                Cette expérience m'a permis de perfectionner mon espagnol et d'élargir mes perspectives
-                                professionnelles dans un contexte multiculturel.
-
+                                Séjour Erasmus à Valladolid (UEMC, Espagne).
+                                Renforcement des compétences en cybersécurité et en informatique dans un environnement
+                                multiculturel.
                             </p>
                         </div>
                     </div>
                 </li>
-                <ul class="timeline">
-                    <li class="timeline-inverted">
-                        <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
-                            <img class="rounded-circle img-fluid" src="assets/img/HAN.png" alt="cvut-image"
-                                style="height: 100%; width: 100%;" srcset="assets/webp/HAN.webp, assets/img/HAN.png" />
+
+                <!-- Séjour 2022 -->
+                <li>
+                    <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
+                        <img class="rounded-circle img-fluid" src="assets/img/HAN.png" alt="han-image"
+                            style="height: 100%; width: 100%;" srcset="assets/webp/HAN.webp, assets/img/HAN.png" />
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h3>janvier - juin 2022</h3>
+                            <h4 class="subheading">Premier Séjour d'études à l'étranger</h4>
                         </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h3>janvier - juin 2022</h3>
-                                <h4 class="subheading">Premier Séjour d'études à l'étranger</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">
-                                    Durant ma formation d'ingénieur, j'ai effectué un séjour d'études à l'étranger
-                                    (erasmus)
-                                    qui s'est déroulé
-                                    à Arnhem aux Pays-Bas (HAN - University of Applied Sciences)
-                                </p>
-                            </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                                Séjour Erasmus à Arnhem (Pays-Bas), au sein de la HAN University of Applied Sciences.
+                                Découverte de nouvelles approches pédagogiques et techniques.
+                            </p>
                         </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
-                            <img class="rounded-circle img-fluid" src="assets/img/esaip.png"
-                                style="height: 100%; width: 99%;" alt="esaip-image"
-                                srcset="assets/webp/esaip.webp, assets/img/esaip.png" />
+                    </div>
+                </li>
+
+                <!-- Prépa -->
+                <li class="timeline-inverted">
+                    <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
+                        <img class="rounded-circle img-fluid" src="assets/img/esaip.png" alt="esaip"
+                            style="height: 100%; width: 99%;" srcset="assets/webp/esaip.webp, assets/img/esaip.png" />
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h3>2020 - 2022</h3>
+                            <h4 class="subheading">Classe préparatoire à l'ESAIP Angers</h4>
                         </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h3>2023 - 2025</h3>
-                                <h4 class="subheading">Entrée en école d'ingénieurs</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">
-                                    À la suite de mon cycle préparatoire intégré à l'ESAIP, j'ai intégré le cycle
-                                    ingénieur en septembre 2022. Mon parcours académique est orienté vers
-                                    l'informatique et les réseaux, avec une spécialisation en cybersécurité.
-                                    Mon ambition est de m'épanouir dans ce domaine passionnant, et ma formation à
-                                    l'ESAIP
-                                    constitue la première étape de ce parcours
-                                </p>
-                            </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                                Cycle préparatoire intégré à l'école d'ingénieurs ESAIP à Angers.
+                            </p>
                         </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
-                            <img class="rounded-circle img-fluid" src="assets/img/esaip.png" alt="esaip"
-                                style="height: 100%; width: 99%;"
-                                srcset="assets/webp/esaip.webp, assets/img/esaip.png" />
+                    </div>
+                </li>
+
+                <!-- Bac -->
+                <li>
+                    <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
+                        <img class="rounded-circle img-fluid timeline-img" src="assets/img/maroc.png" alt="maroc-image"
+                            style="height: 100%; width: 100%;" srcset="assets/webp/maroc.webp, assets/img/maroc.png" />
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h3>2020</h3>
+                            <h4 class="subheading">Baccalauréat Scientifique</h4>
                         </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h3>2020-2022</h3>
-                                <h4 class="subheading">Classe préparatoire à l'ESAIP Angers</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">
-                                    Cycle préparatoire intégré à l'école d'ingénieurs esaip à Angers.
-                                </p>
-                            </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                                Baccalauréat scientifique option Physique-Chimie (BFI) – Agadir, Maroc.
+                            </p>
                         </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image" data-aos="fade-up" data-aos-delay="100">
-                            <img class="rounded-circle img-fluid timeline-img" src="assets/img/maroc.png"
-                                style="height: 100%; width: 100%;"
-                                srcset="assets/webp/maroc.webp, assets/img/maroc.png" />
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h3>2020</h3>
-                                <h4 class="subheading">Baccalauréat Scientifique</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">
-                                    Obtention du baccalauréat scientifique option Physique-Chimie (BFI) - Agadir, Maroc.
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                    </div>
+                </li>
+
+            </ul>
         </div>
     </section>
+
 
     <!-- Work -->
     <section class="page-section portfolio section-padding section-connector" data-aos="fade-up" data-aos-delay="100"
