--- a/en.html
+++ b/en.html
@@ -809,5 +809,6 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/app.js"></script>
 </body>
+<script src="./assets/js/app.js"></script>
 
 </html>
