--- a/en.html
+++ b/en.html
@@ -303,10 +303,12 @@
                         </div>
                         <div class="timeline-body">
                             <p class="text-muted">
-                                IT Systems Officer at <strong>Happy Babees (Nantes)</strong>.
+                                IT Systems Officer at <strong>Happy Babees (Nantes)</strong> as part of my 5th and final
+                                year of engineering studies.
                                 Management and optimization of the information system, SaaS process automation,
                                 cybersecurity (ANSSI self-assessment, BCP/DRP, access management, secure email
                                 protocols).
+
                             </p>
                         </div>
                     </div>
