--- a/index.html
+++ b/index.html
@@ -298,9 +298,12 @@
                         <div class="timeline-body">
                             <p class="text-muted">
                                 Chargé de systèmes d'information opérationnel chez <strong>Happy Babees
-                                    (Nantes)</strong>.
-                                Gestion et optimisation du SI, automatisation de processus SaaS, cybersécurité
-                                (autodiagnostic ANSSI, PCA/PRA, gestion des accès, protocoles de messagerie sécurisés).
+                                    (Nantes)</strong>,
+                                dans le cadre de ma 5ème et dernière année d’études d’ingénieur.
+                                Gestion et optimisation du SI, automatisation de processus SaaS,
+                                cybersécurité (autodiagnostic ANSSI, PCA/PRA, gestion des accès, protocoles de
+                                messagerie sécurisés).
+
                             </p>
                         </div>
                     </div>
