--- a/en.html
+++ b/en.html
@@ -81,7 +81,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="navbar-brand" data-aos="fade-down" target="_blank" data-aos-delay="400"
-                            href="https://www.instagram.com/l.adam0/"><img class="social-icon" id="instagram-icon"
+                            href=""><img class="social-icon" id="instagram-icon"
                                 src="assets/img/icons8-instagram.png"
                                 srcset="assets/webp/icons8-instagram.webp, assets/img/icons8-instagram.png"
                                 alt="isntagram-icon" /> </a>
