--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             Étudiant en 5ème et dernière année à l’école d’ingénieurs ESAIP Angers, ma passion pour les
                             nouvelles technologies et les systèmes d’information m’a conduit à me spécialiser en
                             cybersécurité. Aujourd’hui, je souhaite finaliser mon diplôme en mettant mes compétences en
-                            pratique à travers un stage de 3 mois à partir d’octobre 2025. Ce stage représente pour moi
+                            pratique à travers un stage de 3 mois à partir de novembre 2025. Ce stage représente pour moi
                             l’opportunité de contribuer à des projets concrets dans le domaine de l’informatique et de
                             la cybersécurité, tout en préparant la suite de mon parcours professionnel. Je suis par
                             ailleurs disponible immédiatement, à l’issue de cette période, pour un CDD ou un CDI.
