--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                             Étudiant en 5ème et dernière année à l’école d’ingénieurs ESAIP Angers, ma passion pour les
                             nouvelles technologies et les systèmes d’information m’a conduit à me spécialiser en
                             cybersécurité. Aujourd’hui, je souhaite finaliser mon diplôme en mettant mes compétences en
-                            pratique à travers un stage de 3 mois à partir de novembre 2025. Ce stage représente pour moi
+                            pratique à travers un stage de 3 mois à partir de novembre 2025. Ce stage représente pour
+                            moi
                             l’opportunité de contribuer à des projets concrets dans le domaine de l’informatique et de
                             la cybersécurité, tout en préparant la suite de mon parcours professionnel. Je suis par
                             ailleurs disponible immédiatement, à l’issue de cette période, pour un CDD ou un CDI.
@@ -219,15 +220,32 @@
                             <li>Sécurité messagerie : SPF, DKIM, DMARC, TLS/SSL</li>
                             <li>Normes & conformité : Autodiagnostic ANSSI, PCA/PRA, ISO 27001</li>
                         </ul>
-                        <a class="mt-2" href="https://www.root-me.org/Zetsu-794769" aria-label="Profil Root-Me">
-                            Mon profil Root-Me
-                        </a>
-                        <a class="mt-2" href="https://tryhackme.com/p/Z33tsu" aria-label="Profil THM">
-                            Mon profil TryHackMe
-                        </a>
+
+                        <a class="mt-2" href="https://www.root-me.org/Zetsu-794769" aria-label="Profil Root-Me">Mon
+                            profil Root-Me</a>
+                        <a class="mt-2" href="https://tryhackme.com/p/Z33tsu" aria-label="Profil THM">Mon profil
+                            TryHackMe</a>
                         <p class="mt-2 text-muted"><em>Certification CEH en préparation</em></p>
+
+                        <!-- ===== TryHackMe badge (insère ici) ===== -->
+                        <div class="thm-badge-wrapper mt-3" aria-label="Badge TryHackMe - profil Z33tsu">
+                            <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=1918814"
+                                title="Badge TryHackMe de Z33tsu" loading="lazy" referrerpolicy="no-referrer"
+                                sandbox="allow-scripts allow-same-origin allow-popups"
+                                style="border:none;display:block;width:100%;height:140px;"></iframe>
+
+                            <noscript>
+                                <p class="mb-0">
+                                    <a href="https://tryhackme.com/p/Z33tsu" target="_blank" rel="noopener">Voir mon
+                                        profil TryHackMe</a>
+                                </p>
+                            </noscript>
+                        </div>
+                        <!-- ===== fin badge ===== -->
+
                     </div>
                 </div>
+
 
 
                 <!-- Outils bureautique -->
